<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map_view">


    <fragment
        android:id="@+id/nav_lunch"
        android:name="com.sadek.go4lunch.ui.lunch.YourLunchFragment"
        android:label="@string/toolbar_lunch_title"
        tools:layout="@layout/fragment_your_lunch" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.sadek.go4lunch.ui.settings.SettingsFragment"
        android:label="@string/toolbar_settings_title"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.sadek.go4lunch.ui.logout.LogoutFragment"
        android:label="@string/toolbar_logout_title"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_map_view"
        android:name="com.sadek.go4lunch.ui.map.MapViewFragment"
        android:label="@string/toolbar_title"
        tools:layout="@layout/fragment_map_view" />

    <fragment
        android:id="@+id/nav_list_view"
        android:name="com.sadek.go4lunch.ui.list.RestaurantFragment"
        android:label="@string/toolbar_title"
        tools:layout="@layout/fragment_list_view" />

    <fragment
        android:id="@+id/nav_workmates"
        android:name="com.sadek.go4lunch.ui.workmate.WorkmateFragment"
        android:label="@string/toolbar_workmates_title"
        tools:layout="@layout/fragment_workmates_list" />

</navigation>