<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_login_container"
    android:background="@drawable/plat"
    tools:context=".controllers.activities.LoginActivity">

    <ImageView
        android:id="@+id/activity_login_logo"
        android:layout_width="208dp"
        android:layout_height="208dp"
        android:scaleX="0.8"
        android:layout_marginTop="32dp"
        android:background="@drawable/app_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:id="@+id/activity_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_title"
        android:textSize="80sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/activity_login_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/activity_login_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_subtitle"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/activity_login_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/activity_login_facebook"
        style="@style/FirebaseUI.Button.AccountChooser.FacebookButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="128dp"
        android:text="@string/login_facebook_signIn"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_login_subtitle"/>

    <Button
        android:id="@+id/activity_login_google"
        style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:text="@string/login_google_signIn"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/activity_login_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/login_activity_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>